# utiltool

./: Cargo.toml  README.md  build.rs  flake.nix
nix/: hm-module.nix  lib.nix
src/: cli.rs  config.rs  lib.rs  main.rs
