[package]
name = "utiltool"
description = "A collection of utilities."
authors = [ "Computerdores <jann.stute@protonmail.com>" ]
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = ">=4.5.0", features = ["cargo"] }

[build-dependencies]
clap = { version = ">=4.5.0", features = ["cargo"] }
clap_complete = ">=4.5.0"