[package]
name = "utiltool"
description = "A collection of utilities."
authors = [ "Computerdores <jann.stute@protonmail.com>" ]
version = "0.3.1"
edition = "2021"

[dependencies]
clap = { version = "*", features = ["cargo"] }


[build-dependencies]
clap = { version = "*", features = ["cargo"] }
clap_complete = "*"
clap_mangen = "*"